// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`save star component save star loading state 1`] = `
Array [
  <div>
    Save
  </div>,
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    role="progressbar"
  >
    <div>
      <svg
        height="100%"
        viewBox="0 0 32 32"
        width="100%"
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
        />
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
        />
      </svg>
    </div>
  </div>,
]
`;

exports[`save star component star with saved status renders correctly 1`] = `
Array [
  <div>
    Saved
  </div>,
  <a
    target={null}
  >
    <div>
      <svg
        aria-label="[title]"
        height={18}
        role="img"
        viewBox="0 0 18 18"
        width={18}
      >
        <title>
          Remove from My Articles
        </title>
        <path
          d="M13.616 16.644l-1.778-5.711 4.674-3.554-5.768.013L9 1.705 7.256 7.392 1.488 7.38l4.674 3.554-1.778 5.71L9 13.102l4.616 3.543z"
          fill="#006699"
          stroke="#696969"
        />
      </svg>
    </div>
  </a>,
]
`;

exports[`save star component star with unsaved status renders correctly 1`] = `
Array [
  <div>
    Save
  </div>,
  <a
    target={null}
  >
    <div>
      <svg
        aria-label="[title]"
        height={18}
        role="img"
        viewBox="0 0 18 18"
        width={18}
      >
        <title>
          Save to My Articles
        </title>
        <path
          d="M13.616 16.644l-1.778-5.711 4.674-3.554-5.768.013L9 1.705 7.256 7.392 1.488 7.38l4.674 3.554-1.778 5.71L9 13.102l4.616 3.543z"
          fill="#FFFFFF"
          stroke="#696969"
        />
      </svg>
    </div>
  </a>,
]
`;
